# seyes-api

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pylintrc  pyproject.toml
app/: dependency.py  main.py
app/core/: config.py  event_handlers.py
app/routers/: api.py
app/routers/icinga/: queries.py
app/services/icinga/: icinga.py
app/services/utils/: helper.py
