[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nt-suuri <suuri@nashatech.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
toml = "^0.10.2"
requests = "^2.25.1"
peewee = "^3.14.8"
python-dotenv = "^0.19.2"
python-multipart = "^0.0.5"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
bandit = "^1.7.0"
pylint = "^2.6.0"
behave = "^1.2.6"
PyHamcrest = "^2.0.2"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[too.isort]
# https://pycqa.github.io/isort/docs/configuration/options/
profile = "black"
include_trailing_comma = true
line_length = 120
multi_line_output = 3
known_local_folder = [
  "app",
]